ncurses-6.3/menu/menu.h

  typedef int Item_Options;
  extern MENU_EXPORT(ITEM *) current_item(const MENU *);
  extern MENU_EXPORT(ITEM *) new_item(const char *, const char *);
  extern MENU_EXPORT(Item_Options) item_opts(const ITEM *);
  extern MENU_EXPORT(const char *) item_description(const ITEM *);
  extern MENU_EXPORT(const char *) item_name(const ITEM *);
  extern MENU_EXPORT(const char *) menu_request_name(int);
  extern MENU_EXPORT(int) free_item(ITEM *);
  extern MENU_EXPORT(int) item_index(const ITEM *);
  extern MENU_EXPORT(int) item_opts_off(ITEM *, Item_Options);
  extern MENU_EXPORT(int) item_opts_on(ITEM *, Item_Options);
  extern MENU_EXPORT(int) post_menu(MENU *);
  extern MENU_EXPORT(int) set_current_item(MENU *menu, ITEM *item);
  extern MENU_EXPORT(int) set_item_opts(ITEM *, Item_Options);
  extern MENU_EXPORT(int) set_item_value(ITEM *, bool);
  extern MENU_EXPORT(int) set_top_row(MENU *, int);
  extern MENU_EXPORT(int) top_row(const MENU *);
  extern MENU_EXPORT(int) unpost_menu(MENU *);
  extern MENU_EXPORT(bool) item_value(const ITEM *);
  extern MENU_EXPORT(bool) item_visible(const ITEM *);